--- a/index.html
+++ b/index.html
@@ -1,35 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Basic To Do List</title>
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;500;700&display=swap"
-		rel="stylesheet">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="style.css">
-	<title>Basic To Do List</title>
-</head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <div class="clear">
+          <i class="fa fa-refresh" aria-hidden="true"></i>
+        </div>
+        <div id="date"></div>
+      </div>
+      <div class="content">
+        <ul id="list">
+          <!-- <li class="itme">
+            <i class="fa fa-circle-thin co" job="complete" id="0"></i>
+            <p class="text">Drink coffee</p>
+            <i class="fa fa-trash-o de" job="delete"></i>
+          </li> -->
+        </ul>
+      </div>
+      <div class="add-to-do">
+        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <input type="text" id="item" placeholder="add a to-do" />
+      </div>
+    </div>
 
-<body>
-	<div class="container">
-		<div class="header">
-			<div class="clear">
-				<i class="fa fa-refresh" aria-hidden="true"></i>
-			</div>
-			<div id="date"></div>
-		</div>
-		<div class="content">
-			<ul id="list"></ul>
-		</div>
-		<div class="add-item">
-			<i class="fa fa-plus-circle" aria-hidden="true"></i>
-			<input type="text" id="item" placeholder="add a to-do">
-</div>
-		</div>
-
-
-		<script src="app.js"></script>
-</body>
-
+    <script src="app.js"></script>
+  </body>
 </html>
